--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,8 +1,8 @@
 <!-- Scripts -->
-<script src="{{ "/js/jquery.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/js/jquery.scrollex.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/js/jquery.scrolly.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/js/skel.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/js/util.js" | prepend: site.baseurl }}"></script>
-<!--[if lte IE 8]><script src="{{ "/js/ie/respond.min.js" | prepend: site.baseurl }}"></script><![endif]-->
-<script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/jquery.min.js" | relative_url }}"></script>
+<script src="{{ "/js/jquery.scrollex.min.js" | relative_url }}"></script>
+<script src="{{ "/js/jquery.scrolly.min.js" | relative_url }}"></script>
+<script src="{{ "/js/skel.min.js" | relative_url }}"></script>
+<script src="{{ "/js/util.js" | relative_url }}"></script>
+<!--[if lte IE 8]><script src="{{ "/js/ie/respond.min.js" | relative_url }}"></script><![endif]-->
+<script src="{{ "/js/main.js" | relative_url }}"></script>
