--- a/css/ie9.scss
+++ b/css/ie9.scss
@@ -55,7 +55,7 @@
 
 	#banner,
 	.wrapper.style4 {
-		background-image: url("../../images/banner.jpg");
+		background-image: url("../..{{ site.page_header_image }}");
 		background-position: center center;
 		background-repeat: no-repeat;
 		background-size: cover;
@@ -113,7 +113,7 @@
 
 	#main {
 		> header {
-			background-image: url("../../images/banner.jpg");
+			background-image: url("../..{{ site.landing_page_image }}");
 			background-position: center center;
 			background-repeat: no-repeat;
 			background-size: cover;
